@@ -2333,7 +2333,7 @@ RDB_obj_set_comp(RDB_object *valp, const char *compname,
 
 <p>RDB_obj_set_comp sets the the value of component <var>compname</var>
 of a possible representation of the variable pointed to by <var>valp</var>
-to the value of the riable pointed to by <var>comp</var>.
+to the value of the variable pointed to by <var>comp</var>.
 
 <h3>Return value</h3>
 
