@@ -10,6 +10,9 @@ Changes for Duro 0.8
 
 - Implemented array-valued attributes and RDB_create_array_type().
 
+- Durotcl: duro::array index and duro:array foreach now take a
+  transaction argument.
+
 - Implemented support for system-implemented user-defined types with
   more than one possrep component.
 
